--- a/cfd-codes/st-conv-diff-1d/report/report_st_conv_diff_1d.tex
+++ b/cfd-codes/st-conv-diff-1d/report/report_st_conv_diff_1d.tex
@@ -310,7 +310,7 @@ Figure \ref{fig:first} shows a comparison between the exact solution, the soluti
 \begin{figure}
     \centering
     \includegraphics[width=1.0\textwidth]{results_m011}
-    \caption{first}
+    \caption{Comparison between the exact solution and numerical solutions on the uniform mesh with 11 nodes using the CDS ($CDS\_m011$) and the UDS ($UDS\_m011$). Grey vertical lines represent the positions of the computational nodes.}
     \label{fig:first}
 \end{figure}
 
@@ -321,7 +321,7 @@ Next, results are obtained for a uniform mesh with 51 nodes, which gives $Pe = 1
 \begin{figure}
     \centering
     \includegraphics[width=1.0\textwidth]{results_m051}
-    \caption{second}
+    \caption{Comparison between the exact solution and numerical solutions on the uniform mesh with 51 nodes using the CDS ($CDS\_m051$) and the UDS ($UDS\_m051$). Grey vertical lines represent the positions of the computational nodes.}
     \label{fig:second}
 \end{figure}
 
@@ -330,7 +330,7 @@ The final set of results is obtained for a non-uniform mesh with 11 nodes and a 
 \begin{figure}
     \centering
     \includegraphics[width=1.0\textwidth]{results_m011_r07}
-    \caption{third}
+    \caption{Comparison between the exact solution and numerical solutions on the non-uniform mesh with 11 nodes and refinement factor $r = 0.7$ using the CDS ($CDS\_m011\_r07$) and the UDS ($UDS\_m011\_r07$). Grey vertical lines represent the positions of the computational nodes.}
     \label{fig:third}
 \end{figure}
 
@@ -338,7 +338,7 @@ Interestingly, after a closer look at the numerical results of the CD scheme on 
 
 \begin{table}
     \centering
-    \caption{Table}
+    \caption{Comparison between the exact solution and the numerical solution on the non-uniform mesh with 11 nodes and refinement factor $r = 0.7$ using the CDS. $x\_i$ and $Pe$ are the node coordinates and corresponding Peclet numbers. The comparison ($>/<$) indicates oscillations of the CDS results.}
     \label{tab:my-table}
     \begin{tabular}{ccccc}
     \textbf{xi} & \textbf{Pe} & \textbf{CDS} & \textbf{$>/<$} & \textbf{exact} \\
